fixed spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -74,7 +74,7 @@ img {
     padding: 0 20px;
 }
 .row {
-    margin-top: 60px;
+    margin-bottom: 100px;
 }
 @media (max-width: 900px) {
     .project-description {
@@ -100,6 +100,9 @@ img {
     }
     .btn {
         margin-top: 40px;
+    }
+    .row {
+        margin-top: 50px;
     }
 }
 
